--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
     <!-- Javascript -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script type="module" src="js/ShopPageProducts.js"></script>
+    <script type="module" src="js/shopPageProducts.js"></script>
 
     <script>
       $(function () {
